--- a/doc/3_TensorIR_Tensor_Program_Abstraction_Case_Study_Action.ipynb
+++ b/doc/3_TensorIR_Tensor_Program_Abstraction_Case_Study_Action.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/mlc-ai/notebooks/blob/main/3_TensorIR_Tensor_Program_Abstraction_Case_Study_Action.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Mpn1ti5Urdsv"
       },
       "source": [
@@ -2335,11 +2325,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.10.4 ('mlc': conda)",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.10.4"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "aaffa6035209f65dc356111783931130a4c4995d4af64fce84e8309d82e28b87"
+      }
     }
   },
   "nbformat": 4,
